gentree: add support of Autotools to identify APIs at compile time
Add the GNU Auto tools framework to verify the availability and
prototypes of APIs on the target kernel and enable/disable associated
macros.

* Add Auto tools framework folder and copy them to the destination using gentree tool
* Add M4 function fox xe as well as include core kernel definitions.
* Update Configure.ac file to include Xe m4 file.
* Add Makefile.am file with basic targets to be used by GNU Tools and
generate final Makefile
* Create backport_auto.h header inside backport-include folder and
  include in all file.
* Update Readme
* Update gitignore
* Change folder structure to have drivers in sub-folder src as per the
autotool compatibility

<Destination Folder>
 |-->Autotool Infra files
 |-->M4
 |-->src(will have all copied data from dev kernel)
 |-->Makefile.am
 |-->configure.ac

Reviewed-by: Ayaz A Siddiqui <ayaz.siddiqui@intel.com>
Signed-off-by: S A Muqthyar Ahmed syed.abdul.muqthyar.ahmed@intel.com

--- a/backport/.gitignore
+++ b/backport/.gitignore
@@ -13,9 +13,28 @@ Kconfig.versions
 *.ver
 *.mod
 modules.order
-backport-include/backport/autoconf.h
+src/backport-include/backport/autoconf.h
+src/backport-include/backport/stamp-h1
+src/backport-include/backport/backport_path.h
+src/kconf/zconf.lex.c
+src/kconf/zconf.tab.c
 modules
 .tmp_versions
 Module.symvers
 *.mod.c
+*.mod
 .cache.mk
+*built-in.a
+configure
+autom4te.cache*
+*compile
+*install-sh
+*missing
+*tags
+aclocal.m4
+Makefile
+Makefile.in
+*/*.2
+config.log
+config.status
+src/backport-include/backport/backport_auto.h*
