gentree: Change generated backport environment variables names
Change backport environment variables to align with the development
kernel or release tag used in versions file.

BACKPORTS_VERSION --> BACKPORTS_RELEASE_TAG (Tag of backporting releases
repo)
BACKPORTED_KERNEL_VERSION --> BASE_KERNEL_HEAD(Head of development
kernel)

Add TARGET_KERNEL_NAME ( Kernel name against which backports are build)

V1: Change module name compat to xe-compat.
v2: drm/xe: Add debug prints in xe driver

Reviewed-by: Ayaz A Siddiqui <ayaz.siddiqui@intel.com>
Signed-off-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/Makefile
+++ b/backport/Makefile
@@ -20,7 +20,10 @@ KERNEL_CONFIG := $(KLIB_BUILD)/.config
 KERNEL_MAKEFILE := $(KLIB_BUILD)/Makefile
 CONFIG_MD5 := $(shell md5sum $(KERNEL_CONFIG) 2>/dev/null | sed 's/\s.*//')
 
-export KLIB KLIB_BUILD BACKPORT_DIR KMODDIR KMODPATH_ARG
+# TARGET_KERNEL_NAME with have info about the kernel we are building against i.e., uname -r
+TARGET_KERNEL_NAME=$(shell echo $(KLIB_BUILD) | cut -d "/" -f 4 2>/dev/null || echo 1)
+
+export KLIB KLIB_BUILD BACKPORT_DIR KMODDIR KMODPATH_ARG TARGET_KERNEL_NAME
 
 # disable built-in rules for this file
 .SUFFIXES:
