--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -11,9 +11,11 @@ NOSTDINC_FLAGS += \
 	-I$(M)/include/uapi \
 	-include $(M)/backport-include/backport/backport.h \
 	$(call backport-cc-disable-warning, unused-but-set-variable) \
-	-DCPTCFG_VERSION=\"$(BACKPORTS_VERSION)\" \
-	-DCPTCFG_KERNEL_VERSION=\"$(BACKPORTED_KERNEL_VERSION)\" \
-	-DCPTCFG_KERNEL_NAME=\"$(BACKPORTED_KERNEL_NAME)\" \
+	-DCPTCFG_BACKPORTS_RELEASE_TAG=\"$(BACKPORTS_RELEASE_TAG)\" \
+	-DCPTCFG_BASE_KERNEL_HEAD=\"$(BASE_KERNEL_HEAD)\" \
+	-DCPTCFG_KERNEL_NAME=\"$(KERNEL_NAME)\" \
+	-DCPTCFG_BASE_KERNEL_TAG=\"$(BASE_KERNEL_TAG)\" \
+	-DCPTCFG_TARGET_KERNEL_NAME=\"$(TARGET_KERNEL_NAME)\" \
 	$(BACKPORTS_GIT_TRACKER_DEF) \
 	$(CFLAGS)
 
