--- a/backport/Makefile.real
+++ b/backport/Makefile.real
@@ -1,5 +1,5 @@
 include versions
-export BACKPORTS_VERSION BACKPORTED_KERNEL_VERSION BACKPORTED_KERNEL_NAME
+export BACKPORTS_RELEASE_TAG BASE_KERNEL_HEAD BASE_KERNEL_NAME BASE_KERNEL_TAG TARGET_KERNEL_NAME
 ifdef BACKPORTS_GIT_TRACKED
 export BACKPORTS_GIT_TRACKER_DEF=-DBACKPORTS_GIT_TRACKED=\"$(BACKPORTS_GIT_TRACKED)\"
 else
