Makefile: Update Makefile.kernel file to build xe module
Add neccessary changes in Makefile.kernel file to build
xe module.

Reviewed-by: Ayaz A Siddiqui <ayaz.siddiqui@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -7,6 +7,7 @@ backport-cc-disable-warning = $(call try-run,\
 NOSTDINC_FLAGS += \
 	-I$(M)/backport-include/ \
 	-I$(M)/include/ \
+	-I$(M)/include/drm \
 	-I$(M)/include/uapi \
 	-include $(M)/backport-include/backport/backport.h \
 	$(call backport-cc-disable-warning, unused-but-set-variable) \
@@ -23,6 +24,7 @@ export backport_srctree = $(BACKPORT_DIR)
 NOSTDINC_FLAGS += \
 	-I$(BACKPORT_DIR)/backport-include/ \
 	-I$(BACKPORT_DIR)/include/ \
+	-I$(BACKPORT_DIR)/include/drm \
 	-I$(BACKPORT_DIR)/include/uapi \
 	-include $(BACKPORT_DIR)/backport-include/backport/backport.h \
 	$(CFLAGS)
@@ -33,3 +35,6 @@ subdir-ccflags-y := $(call cc-option, -fno-pie) $(call cc-option, -no-pie)
 subdir-ccflags-y += -std=gnu11
 
 obj-y += compat/
+
+# XE Drivers
+obj-$(CPTCFG_DRM_XE) += drivers/gpu/drm/xe/
