drivers/gpu: Add ttm oot module support
This backport is required in order to support a TTM LRU-walk feature.
This cannot be avoided due to the structural changes(struct
ttm_resource_cursor) inside ttm driver and initialization of variables
using ttm_lru_bulk_* apis.

Series: https://patchwork.freedesktop.org/series/135802/

v2: Add BACKPORT_MOD_VERSIONS to display information
    about oot module version.

Reviewed-by: Ayaz A Siddiqui <ayaz.siddiqui@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -41,3 +41,6 @@ obj-y += compat/
 
 # XE Drivers
 obj-$(CPTCFG_DRM_XE) += drivers/gpu/drm/xe/
+obj-$(CPTCFG_DRM_TTM)   += drivers/gpu/drm/ttm/
+drm_ttm_helper-y := drivers/gpu/drm/drm_gem_ttm_helper.o
+obj-$(CPTCFG_DRM_TTM_HELPER) += drm_ttm_helper.o
