Makefile: Add oot config to disable non supported features
Add OOT_BACKPORT config to disable non supported features
for xe oot module.

Reviewed-by: Ayaz A Siddiqui <ayaz.siddiqui@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -16,6 +16,7 @@ NOSTDINC_FLAGS += \
 	-DCPTCFG_KERNEL_NAME=\"$(KERNEL_NAME)\" \
 	-DCPTCFG_BASE_KERNEL_TAG=\"$(BASE_KERNEL_TAG)\" \
 	-DCPTCFG_TARGET_KERNEL_NAME=\"$(TARGET_KERNEL_NAME)\" \
+	-DCPTCFG_OOT_BACKPORT=\"$(OOT_BACKPORT)\" \
 	$(BACKPORTS_GIT_TRACKER_DEF) \
 	$(CFLAGS)
 
