Makefile: convert assign_str prototype check using parser
Fix current version control for assign_str function by implementing a
parser script called before build and dynamically generate a macro in a new header
based on prototype.

Reviewed-by: Ayaz A Siddiqui <ayaz.siddiqui@intel.com>
Signed-off-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>

--- a/autotools/Makefile.am
+++ b/autotools/Makefile.am
@@ -103,7 +103,13 @@ xe-dkms-deb-pkg: clean
 all clean:
 	$(MAKE) -C src $@
 
-modules olddefconfig menuconfig savedefconfig:
+olddefconfig menuconfig savedefconfig:
+	$(MAKE) -C src KLIB=$(LINUX_OBJ) KLIB_BUILD=$(LINUX_OBJ) $@
+
+
+.PHONY: modules
+modules: clean
+	$(shell ./src/scripts/create_automacro_h.sh -h $(LINUX_OBJ) -b $(BACKPORT_DIR))
 	$(MAKE) -C src KLIB=$(LINUX_OBJ) KLIB_BUILD=$(LINUX_OBJ) $@
 
 #------------------------------------------------------------------------------
