Makefile: Fix Kernel tag extraction issue
Tag with # as part is causing issues during extraction in
Makefile.kernel. Due to which source path and subsequent flags
were getting corrupted and ultimately leading to no input files to gcc

Error:
-------------------------------------------------------------------------------
gcc: fatal error: no input files
-------------------------------------------------------------------------------

Reviewed-by: Ayaz A Siddiqui <ayaz.siddiqui@intel.com>
Signed-off-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>

--- a/backport/Makefile.real
+++ b/backport/Makefile.real
@@ -1,5 +1,10 @@
 include versions
-export BACKPORTS_RELEASE_TAG BASE_KERNEL_HEAD BASE_KERNEL_NAME BASE_KERNEL_TAG TARGET_KERNEL_NAME OOT_BACKPORT
+
+# Remove # from the tag to avoid issue of src folder flag corruption during NOSTDINC_FLAGS update
+TAG_EXTRACT := $(shell cat $(BACKPORT_DIR)/versions | grep BASE_KERNEL_TAG | sed "s/#//" | cut -d '"' -f 2 )
+export BASE_KERNEL_TAG=$(TAG_EXTRACT)
+
+export BACKPORTS_RELEASE_TAG BASE_KERNEL_HEAD BASE_KERNEL_NAME TARGET_KERNEL_NAME OOT_BACKPORT
 ifdef BACKPORTS_GIT_TRACKED
 export BACKPORTS_GIT_TRACKER_DEF=-DBACKPORTS_GIT_TRACKED=\"$(BACKPORTS_GIT_TRACKED)\"
 else
