EU Debugger:Backport ptrace_may_access api
Backported ptrace_may_access without calling
security_ptrace_access_check.

Replaced security_ptrace_access_check function call
with return 0 value(always success).

Reviewed-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/compat/Makefile
+++ b/backport/compat/Makefile
@@ -4,6 +4,6 @@ obj-m += xe-compat.o
 else
 obj-y += xe-compat.o
 endif
-xe-compat-y += main.o
+xe-compat-y += main.o ptrace.o
 
 # Kernel backport compatibility code
