--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           libpci-dev \
           libpciaccess-dev \
           libpixman-1-dev \
-          libprocps-dev \
+          libproc2-dev \
           libssl-dev \
           libtool \
           libudev-dev \
