--- a/backport/compat/Makefile
+++ b/backport/compat/Makefile
@@ -4,6 +4,6 @@ obj-m += xe-compat.o
 else
 obj-y += xe-compat.o
 endif
-xe-compat-y += main.o ptrace.o iov.o drm_drv.o drm_managed.o
+xe-compat-y += main.o ptrace.o iov.o drm_drv.o drm_managed.o hrtimer.o
 
 # Kernel backport compatibility code
