--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: [ "kernel-backport/main", "kernel-backport/main_6.14" ]
 
   workflow_dispatch:
 
