Add conditional DRM_GPUVM build infrastructure for xe oot module
The Intel XE GPU driver depends on the DRM_GPUVM subsystem which was
introduced in Linux kernel 6.8. For kernels prior to 6.8, the
DRM_GPUVM functionality needs to be backported to provide the GPU
virtual memory management framework that XE relies on.

- Added CONFIG_DRM_GPUVM configuration option in xe/Kconfig
- Makefile.kernel: compiles drm_gpuvm only when config is enabled
- Added files required in copy-list-xe-kobuk

This infrastructure enables seamless XE driver support across kernel
versions without manual configuration, providing clean separation
between backported and native DRM_GPUVM implementations.

Reference:
    b06d47be7c83
    drm/xe: Port Xe to GPUVA

Reviewed-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -44,3 +44,8 @@ obj-$(CPTCFG_DRM_XE) += drivers/gpu/drm/xe/
 obj-$(CPTCFG_DRM_TTM)   += drivers/gpu/drm/ttm/
 drm_ttm_helper-y := drivers/gpu/drm/drm_gem_ttm_helper.o
 obj-$(CPTCFG_DRM_TTM_HELPER) += drm_ttm_helper.o
+# Only compile drm_gpuvm if config is enabled and base kernel doesn't have it
+ifneq ($(filter m y, $(CPTCFG_DRM_GPUVM)),)
+obj-$(CPTCFG_DRM_GPUVM) += drm_gpuvm.o
+drm_gpuvm-y := drivers/gpu/drm/drm_gpuvm.o
+endif
