Add gpu scheduler subsystem for xe oot compatibility
Multiple gpu scheduler api incompatibilities found between xe driver
and kernel 6.6 scheduler subsystem. which causes below errors.

Errors:
-------------------------------------------------------------------------------
error: 'struct drm_gpu_scheduler' has no member named 'pause_submit'
error: implicit declaration of function 'drm_sched_tdr_queue_imm'
error: 'struct drm_gpu_scheduler' has no member named 'submit_wq'
-------------------------------------------------------------------------------

Instead of complex compatibility wrappers, backport the entire gpu
scheduler subsystem from newer kernels to provide complete functionality.

Reference:
    a6149f039369
    drm/sched: Convert drm scheduler to use a work queue rather than kthread

Reviewed-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -42,6 +42,7 @@ obj-y += compat/
 # XE Drivers
 obj-$(CPTCFG_DRM_XE) += drivers/gpu/drm/xe/
 obj-$(CPTCFG_DRM_TTM)   += drivers/gpu/drm/ttm/
+obj-$(CPTCFG_DRM_SCHED) += drivers/gpu/drm/scheduler/
 drm_ttm_helper-y := drivers/gpu/drm/drm_gem_ttm_helper.o
 obj-$(CPTCFG_DRM_TTM_HELPER) += drm_ttm_helper.o
 # Only compile drm_gpuvm if config is enabled and base kernel doesn't have it
