--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -50,3 +50,5 @@ ifneq ($(filter m y, $(CPTCFG_DRM_GPUVM)),)
 obj-$(CPTCFG_DRM_GPUVM) += drm_gpuvm.o
 drm_gpuvm-y := drivers/gpu/drm/drm_gpuvm.o
 endif
+obj-$(CPTCFG_INTEL_VSEC) += drivers/platform/x86/intel/
+obj-$(CPTCFG_MFD_INTEL_PMT) += drivers/platform/x86/intel/
