backports: Add mtd_intel_dg driver backport support
mtd_intel_dg driver support provides an MTD device to access
Intel Discrete Graphics non-volatile memory.

It exposes GPU flash storage as standard Linux /dev/mtdX devices, allowing
direct read/write/erase operations on GPU BIOS, firmware, and other
persistent storage.

Reference:
    ceb5ab3cb646
    mtd: add driver for intel graphics non-volatile memory device

Reviewed-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -52,3 +52,6 @@ drm_gpuvm-y := drivers/gpu/drm/drm_gpuvm.o
 endif
 obj-$(CPTCFG_INTEL_VSEC) += drivers/platform/x86/intel/
 obj-$(CPTCFG_MFD_INTEL_PMT) += drivers/platform/x86/intel/
+#mtd
+mtd_intel_dg-y := drivers/mtd/devices/mtd_intel_dg.o
+obj-$(CPTCFG_MTD_INTEL_DG)      += mtd_intel_dg.o
