XE-KMD Backport-Release: xebr-v6.14.11-250909.17.1.0
Generation Information:
XeKMD-Backport-Tag: xe-v6.14.11-250909.17
Backports Tag: xeb_v6.14.11_250909.17.1
Backports Branch: oot-backport/main
Backports Head: 40cf10b

Reviewed-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,7 +63,7 @@ DEF_VER=@DOLLAR_SIGN@(shell cat debian/changelog.in | head -1 | cut -d '(' -f 2 
 #------------------------------------------------------------------------------
 
 
-export KBUILD_ONLYXEDIRS := src/drivers/gpu src/include src/scripts
+export KBUILD_ONLYXEDIRS := src/drivers/gpu src/include src/scripts src/drivers/platform src/drivers/mtd
 export KBUILD_AUTOTOOLS := m4 AUTHORS  ChangeLog  configure.ac  COPYING  INSTALL Makefile  Makefile.am  NEWS  README compile.sh
 XE_TAR_CONTENT=$(KBUILD_ONLYXEDIRS) $(KBUILD_AUTOTOOLS) src/Makefile* src/local-symbols src/MAINTAINERS \
 	src/Kconfig src/Kconfig.sources src/Kconfig.package.hacks src/COPYING src/versions src/defconfigs src/backport-include src/kconf src/compat
