compat: backport dma_fence_array_alloc/init functions
The dma_fence_array_alloc() and dma_fence_array_init() functions
were introduced in kernel v6.12 to split the fence array creation into
separate allocation and initialization phases. These functions causing
implicit declaration errors during backport compilation on older version.

Currently we were simply using dma_fence_array_create in place, but
due to this we are facing deadlock issue as below. To fix this we are
now backporting the API and using it instead of older API usage.

Error:
------------------------------------------------------------------------------
WARNING: possible circular locking dependency detected

xe_exec_balance/2791 is trying to acquire lock:
ffff88816b0d1800 (&vm->userptr.notifier_lock){++++}-{3:3},
at: vma_userptr_invalidate+0xec/0x340 [xe]

but task is already holding lock:
ffffffff834bd980 (mmu_notifier_invalidate_range_start){+.+.}-{0:0},
at: unmap_vmas+0x9a/0x1f0
------------------------------------------------------------------------------

Reference:
    ddc94d0b17e8e
    dma-buf: Split out dma fence array create into alloc and arm functions

Reviewed-by: S A Muqthyar Ahmed <syed.abdul.muqthyar.ahmed@intel.com>
Signed-off-by: Kanaka Raju Nayana <kanaka.raju.nayana@intel.com>

--- a/backport/compat/Makefile
+++ b/backport/compat/Makefile
@@ -4,6 +4,6 @@ obj-m += xe-compat.o
 else
 obj-y += xe-compat.o
 endif
-xe-compat-y += main.o ptrace.o iov.o drm_drv.o drm_managed.o hrtimer.o memory.o
+xe-compat-y += main.o ptrace.o iov.o drm_drv.o drm_managed.o hrtimer.o memory.o dma-fence-array.o
 
 # Kernel backport compatibility code
