Backport VFIO driver
Updated below files to enable vfio driver.
 1. copy-list
 2. defconfigs
 3. Makefile.kernel
 4. Kconfig.sources

Signed-off-by: Rachapalli Bandi Jagadeesh <jagadeesh.rachapalli.bandi@intel.com>

--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -55,3 +55,5 @@ obj-$(CPTCFG_MFD_INTEL_PMT) += drivers/platform/x86/intel/
 #mtd
 mtd_intel_dg-y := drivers/mtd/devices/mtd_intel_dg.o
 obj-$(CPTCFG_MTD_INTEL_DG)      += mtd_intel_dg.o
+#vfio
+obj-$(CPTCFG_VFIO) += drivers/vfio/
