--- a/backport/Makefile.kernel
+++ b/backport/Makefile.kernel
@@ -56,4 +56,4 @@ obj-$(CPTCFG_MFD_INTEL_PMT) += drivers/platform/x86/intel/
 mtd_intel_dg-y := drivers/mtd/devices/mtd_intel_dg.o
 obj-$(CPTCFG_MTD_INTEL_DG)      += mtd_intel_dg.o
 #vfio
-obj-$(CPTCFG_VFIO) += drivers/vfio/
+obj-$(CPTCFG_XE_VFIO_PCI) += drivers/vfio/pci/xe/
